--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.19.2",
     "firebase": "^10.8.1",
+    "gravatar": "^1.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
